--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "ccxt": "^4.5.0",
-    "chartjs-chart-financial": "^0.2.1",
-    "chartjs-node-canvas": "^5.0.0",
     "dotenv": "^17.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "technicalindicators": "^3.1.0"
