--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ccxt": "^4.5.0",
     "dotenv": "^17.2.1",
+    "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "technicalindicators": "^3.1.0"
   }
