--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon bot.js",
+    "start": "NODE_ENV=production node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +18,8 @@
     "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "technicalindicators": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
